# JUB_SDK_CXX

./: CMakeLists.txt  README  README.md
JubSDKCore/: JubSDKCore+COIN_BTC.h  JubSDKCore+COIN_BTC.mm  JubSDKCore+COIN_ETH.h  JubSDKCore+COIN_ETH.mm  JubSDKCore+DEV.mm  JubSDKCore.h  JubSDKCore.mm
JubSDKDemo_Android/: .gitignore  settings.gradle
JubSDKDemo_Android/app/: CMakeLists.txt  build.gradle
JubSDKDemo_Android/app/src/androidTest/java/com/jubiter/sdk/: ExampleInstrumentedTest.java
JubSDKDemo_Android/app/src/main/: AndroidManifest.xml
JubSDKDemo_Android/app/src/main/assets/: path.json  testBTC44.json  testBTC49.json  testETH.json
JubSDKDemo_Android/app/src/main/cpp/: CMakeLists.txt
JubSDKDemo_Android/app/src/main/cpp/jni/: implJni.cpp  implJni.h
JubSDKDemo_Android/app/src/main/cpp/jni/utils/: logUtils.cpp  logUtils.h
JubSDKDemo_Android/app/src/main/java/com/jubiter/sdk/jubnative/: InnerDiscCallback.java  InnerScanCallback.java  NativeApi.java
JubSDKDemo_Android/app/src/main/java/com/jubiter/sdk/jubnative/utils/: JUB_DEVICE_INFO.java
JubSDKDemo_Android/app/src/main/java/com/jubiter/test/jubsdktest/: JSONParseUtils.java  JubCallback.java  JubiterImpl.java  MainActivity.java  StrUtil.java  TimeUtil.java  VerifyPinDialog.java
JubSDKDemo_Android/app/src/main/java/com/jubiter/test/jubsdktest/ble/: BluetoothKeyApi.java  BtDeviceAdapter.java  FTBTDevice.java  FtBTConnectCallback.java  SelectDeviceDialog.java
JubSDKDemo_Android/app/src/main/res/drawable/: bg_log.xml  setbar_bg.xml
JubSDKDemo_Android/app/src/main/res/layout/: activity_main.xml  device_list_item.xml  dialog_verify_pin.xml
JubSDKDemo_Android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
JubSDKDemo_Android/app/src/test/java/com/jubiter/sdk/: ExampleUnitTest.java
JubSDKDemo_Android/gradle/wrapper/: gradle-wrapper.properties
builds/ios/JubSDK.xcodeproj/: project.pbxproj
builds/ios/JubSDKCore.xcodeproj/: project.pbxproj
builds/ios/JubSDKDemo.xcodeproj/: project.pbxproj
builds/macOS/JubSDK.xcodeproj/: project.pbxproj
builds/macOS/JubSDK.xcodeproj/xcshareddata/xcschemes/: JubSDK.xcscheme
builds/macOS/JubSDKCore.xcodeproj/: project.pbxproj
builds/macOS/JubSDKCore.xcodeproj/xcshareddata/xcschemes/: JubSDK.xcscheme
builds/macOS/test.xcodeproj/: project.pbxproj
include/: JUB_SDK.h  JUB_SDK_BTC.h  JUB_SDK_COMM.h  JUB_SDK_ETH.h
include/context/: Context.h  ContextBTC.h  ContextETH.h
include/libBCH/: libBCH.hpp
include/libBTC/: libBTC.hpp
include/token/: JubiterBLDImpl.h
include/token/interface/: BTCTokenInterface.hpp  ETHTokenInterface.hpp  TokenInterface.hpp
include/utility/: util.h
src/: CMakeLists.txt  JUB_SDK_BTC.cpp  JUB_SDK_ETH.cpp
src/context/: Context.cpp  ContextBTC.cpp  ContextETH.cpp
src/libBCH/: libBCH.cpp
src/libBTC/: libBTC.cpp
src/token/: JubiterBLDImpl.cpp  JubiterBLDImplBTC.cpp  JubiterBLDImplETH.cpp
src/utility/: util.cpp
test/JubSDKCore/: main.mm  test_btc.mm  test_eth.mm  test_hcash.mm  test_trezor_crypto.h  test_trezor_crypto.mm
test/json/: testDASH.json
